--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -6,6 +6,7 @@
     <div class="row">
       <div class="col-lg-7 mb-4 mb-lg-0">
         <form action="{{ site.Params.contact_form_action | safeURL }}" method="POST"
+          name="contact"
           netlify-honeypot="bot-field"
           data-netlify="true"
           data-netlify-recaptcha="true"
