--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -48,7 +48,8 @@
       </div>
     </div>
     <div class="border-top border-default text-center py-4 mt-4">
-      <small class="content">{{ site.Params.Copyright | markdownify }}</small>
+      <small class="content">{{ site.Params.Copyright | markdownify }}</small><br>
+      <small class="content"><a href="https://novacore.info" target="_blank">Design by NovaCore</a></small>
     </div>
   </div>
 </footer>
